Keygrabber hidden. Removed buggy hover on mobile devices

--- a/index.css
+++ b/index.css
@@ -17,9 +17,12 @@ span {
     color: darkgray;
 }
 
-span:hover {
-    background-color: aquamarine;
+@media (hover: hover) and (pointer: fine) {
+    span:hover {
+        background-color: aquamarine;
+    }
 }
+
 
 span:nth-child(16n)::after {
     content: "\A";
